--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "files.associations": {
-        "string": "cpp"
+        "string": "cpp",
+        "numeric": "cpp",
+        "array": "cpp",
+        "buffer": "cpp",
+        "socket": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp"
     }
 }
