修改makefile及简单测试

--- a/Server_Client/Server/makefile
+++ b/Server_Client/Server/makefile
@@ -1,5 +1,6 @@
 #子目录的Makefile直接读取其子目录就行
-SUBDIRS=$(shell ls -l | grep ^d | awk '{print $$9}')
+# SUBDIRS=$(shell ls -l | grep ^d | awk '{print $$9}')
+OBJS_DIR=$(shell pwd)/build
 CFLAGS=-I ../Sock/ -I ../include
 #以下同根目录下的makefile的相同代码的解释
 CUR_SOURCE=${wildcard *.cpp}
@@ -8,6 +9,9 @@ all:$(SUBDIRS) $(CUR_OBJS)
 $(SUBDIRS):ECHO
 	make -C $@
 $(CUR_OBJS):%.o:%.cpp
-	$(CC) $(CFLAGS) -c $^ -o $(ROOT_DIR)/$(OBJS_DIR)/$@
+	$(CC) $(CFLAGS) -c $^ -o $(OBJS_DIR)/$@
+	@cp -rfp $(OBJS_DIR)/*.o $(BUILD_DIR)
 ECHO:
 	@echo $(SUBDIRS)
+clean:
+	@rm build/* 
