--- a/Server_Client/makefile
+++ b/Server_Client/makefile
@@ -3,7 +3,7 @@ CC=g++
 CFLAGS=-I ../Sock/ -I ../include -I ../Client -I ../Server
 #debug文件夹里的makefile文件需要最后执行，所以这里需要执行的子目录要排除debug文件夹，这里使用awk排除了debug文件夹，读取剩下的文件夹
 #SUBDIRS=$(shell ls -l | grep ^d | awk '{if($$9 != "test_S" && $$9 != "include" && $$9 != "test_C") print $$9}')
-SUBDIRS= Sock Cmd Client Server test_C test_S 
+SUBDIRS= Sock Cmd Client Server_select test_C test_S 
 #无需下一行的注释代码，因为我们已经知道debug里的makefile是最后执行的，所以最后直接去debug目录下执行指定的makefile文件就行，具体下面有注释
 #DEBUG=$(shell ls -l | grep ^d | awk '{if($$9 == "debug") print $$9}')
 #记住当前工程的根目录路径
