--- a/Server_Client/Client_select/makefile
+++ b/Server_Client/Client_select/makefile
@@ -5,9 +5,11 @@ CFLAGS=-I ../Sock/ -I ../include
 #以下同根目录下的makefile的相同代码的解释
 CUR_SOURCE=${wildcard *.cpp}
 CUR_OBJS=${patsubst %.cpp, %.o, $(CUR_SOURCE)}
-all:$(SUBDIRS) $(CUR_OBJS)
+all:$(SUBDIRS) MKDIR $(CUR_OBJS)
 $(SUBDIRS):ECHO
 	make -C $@
+MKDIR:
+	@mkdir -p build
 $(CUR_OBJS):%.o:%.cpp
 	$(CC) $(CFLAGS) -c $^ -o $(OBJS_DIR)/$@
 	@cp -rfp $(OBJS_DIR)/*.o $(BUILD_DIR)
