--- a/Server_Client/Server_thread/makefile
+++ b/Server_Client/Server_thread/makefile
@@ -1,7 +1,7 @@
 #子目录的Makefile直接读取其子目录就行
 # SUBDIRS=$(shell ls -l | grep ^d | awk '{print $$9}')
 OBJS_DIR=$(shell pwd)/build
-CFLAGS=-I ../Sock/ -I ../include/ -I ../Cmd/
+CFLAGS=-I ../Sock/ -I ../include/ -I ../Cmd/ -I ../Thread_queue -pthread
 #以下同根目录下的makefile的相同代码的解释
 CUR_SOURCE=${wildcard *.cpp}
 CUR_OBJS=${patsubst %.cpp, %.o, $(CUR_SOURCE)}
