--- a/Server_Client/Thread_queue/makefile
+++ b/Server_Client/Thread_queue/makefile
@@ -1,5 +1,5 @@
 #子目录的Makefile直接读取其子目录就行
-CFLAGS=-I ../Sock/ -I ../include -I ../Server_thread -I ../Cmd -I ../Thread_queue -pthread 
+CFLAGS=-I ../Sock/ -I ../include -I ../Server_thread -I ../Cmd  -pthread 
 # SUBDIRS=$(shell ls -l | grep ^d | awk '{print $$9}')
 OBJS_DIR=$(shell pwd)/build
 #以下同根目录下的makefile的相同代码的解释
