--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
 		"typeinfo": "cpp",
 		"*.ipp": "cpp",
 		"variant": "cpp",
-		"unordered_set": "cpp"
+		"unordered_set": "cpp",
+		"bitset": "cpp"
 	}
 }
