--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,29 @@
 		"unordered_set": "cpp",
 		"bitset": "cpp",
 		"any": "cpp",
-		"list": "cpp"
+		"list": "cpp",
+		"cfenv": "cpp",
+		"charconv": "cpp",
+		"chrono": "cpp",
+		"cinttypes": "cpp",
+		"codecvt": "cpp",
+		"complex": "cpp",
+		"condition_variable": "cpp",
+		"csetjmp": "cpp",
+		"csignal": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cuchar": "cpp",
+		"forward_list": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"future": "cpp",
+		"iomanip": "cpp",
+		"mutex": "cpp",
+		"scoped_allocator": "cpp",
+		"shared_mutex": "cpp",
+		"thread": "cpp",
+		"typeindex": "cpp",
+		"valarray": "cpp"
 	}
 }
