--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,82 +1,84 @@
 {
-	"files.associations": {
-		"string": "cpp",
-		"numeric": "cpp",
-		"array": "cpp",
-		"buffer": "cpp",
-		"socket": "cpp",
-		"string_view": "cpp",
-		"initializer_list": "cpp",
-		"utility": "cpp",
-		"algorithm": "cpp",
-		"cmath": "cpp",
-		"*.tcc": "cpp",
-		"atomic": "cpp",
-		"bit": "cpp",
-		"cctype": "cpp",
-		"clocale": "cpp",
-		"cstdarg": "cpp",
-		"cstddef": "cpp",
-		"cstdint": "cpp",
-		"cstdio": "cpp",
-		"cstdlib": "cpp",
-		"cwchar": "cpp",
-		"cwctype": "cpp",
-		"deque": "cpp",
-		"map": "cpp",
-		"set": "cpp",
-		"unordered_map": "cpp",
-		"vector": "cpp",
-		"exception": "cpp",
-		"functional": "cpp",
-		"iterator": "cpp",
-		"memory": "cpp",
-		"memory_resource": "cpp",
-		"optional": "cpp",
-		"random": "cpp",
-		"system_error": "cpp",
-		"tuple": "cpp",
-		"type_traits": "cpp",
-		"fstream": "cpp",
-		"iosfwd": "cpp",
-		"iostream": "cpp",
-		"istream": "cpp",
-		"limits": "cpp",
-		"new": "cpp",
-		"ostream": "cpp",
-		"sstream": "cpp",
-		"stdexcept": "cpp",
-		"streambuf": "cpp",
-		"typeinfo": "cpp",
-		"*.ipp": "cpp",
-		"variant": "cpp",
-		"unordered_set": "cpp",
-		"bitset": "cpp",
-		"any": "cpp",
-		"list": "cpp",
-		"cfenv": "cpp",
-		"charconv": "cpp",
-		"chrono": "cpp",
-		"cinttypes": "cpp",
-		"codecvt": "cpp",
-		"complex": "cpp",
-		"condition_variable": "cpp",
-		"csetjmp": "cpp",
-		"csignal": "cpp",
-		"cstring": "cpp",
-		"ctime": "cpp",
-		"cuchar": "cpp",
-		"forward_list": "cpp",
-		"ratio": "cpp",
-		"regex": "cpp",
-		"future": "cpp",
-		"iomanip": "cpp",
-		"mutex": "cpp",
-		"scoped_allocator": "cpp",
-		"shared_mutex": "cpp",
-		"thread": "cpp",
-		"typeindex": "cpp",
-		"valarray": "cpp"
-	},
-	"editor.formatOnSave": true
+    "files.associations": {
+        "string": "cpp",
+        "numeric": "cpp",
+        "array": "cpp",
+        "buffer": "cpp",
+        "socket": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "algorithm": "cpp",
+        "cmath": "cpp",
+        "*.tcc": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "fstream": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "typeinfo": "cpp",
+        "*.ipp": "cpp",
+        "variant": "cpp",
+        "unordered_set": "cpp",
+        "bitset": "cpp",
+        "any": "cpp",
+        "list": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cuchar": "cpp",
+        "forward_list": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp",
+        "future": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "scoped_allocator": "cpp",
+        "shared_mutex": "cpp",
+        "thread": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp"
+    },
+    "editor.formatOnSave": true,
+    "python.languageServer": "Default",
+    "python.formatting.provider": "autopep8"
 }
