--- a/kafka-c-getting-started/config.ini
+++ b/kafka-c-getting-started/config.ini
@@ -1,12 +1,12 @@
 [default]
-bootstrap.servers=
-security.protocol=SASL_SSL
-sasl.mechanisms=PLAIN
-sasl.username=< CLUSTER API KEY >
-sasl.password=< CLUSTER API SECRET >
+bootstrap.servers=localhost:9092
+# security.protocol=SASL_SSL
+# sasl.mechanisms=PLAIN
+# sasl.username=< CLUSTER API KEY >
+# sasl.password=< CLUSTER API SECRET >
 
 [consumer]
-group.id=c_example_group_1
+group.id=test-consumer-group
 
 # 'auto.offset.reset=earliest' to start reading from the beginning of
 # the topic if no committed offsets exist.
